Fixed layout issue for IE when w <=800.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -10,7 +10,8 @@
   background: lightgoldenrodyellow;
 
   .medium({
-    height: auto !important;
+    display: block;
+    height: auto;
     min-height: 100vh;
   });
 }
@@ -60,6 +61,7 @@
 
   .medium({
     display: block;
+    height: auto;
   });
 }
 
